# Copyright (c) 2021 Graphcore Ltd. All rights reserved.
add_subdirectory(pipelining)
add_popart_py_unit_test(popxl-test_dot_visualizer test_dot_visualizer.py VARIANTS IpuModel)
add_popart_py_unit_test(popxl-milestone1-basic_subgraph test_milestone1_basic_subgraph.py VARIANTS IpuModel)
add_popart_py_unit_test(popxl-milestone2-autodiff test_milestone2_autodiff.py VARIANTS IpuModel)
add_popart_py_unit_test(popxl-modified_call test_modified_call.py VARIANTS IpuModel)
add_popart_py_unit_test(popxl-random-seed test_random_seed.py VARIANTS IpuModel)
add_popart_py_unit_test(popxl-remote_buffer_store_load test_remote_buffer_store_load.py VARIANTS Hw)
add_popart_py_unit_test(popxl-model_caching test_model_caching.py VARIANTS Hw)
add_popart_py_unit_test(popxl-rts_autodiff test_rts_autodiff.py VARIANTS IpuModel)
add_popart_py_unit_test(popxl-gather_oor test_gather_oor.py VARIANTS IpuModel)
add_popart_py_unit_test(popxl-session test_session.py VARIANTS IpuModel)
add_popart_py_unit_test(popxl-session_ctxtmgr test_session_ctxtmgr.py VARIANTS Cpu IpuModel Hw)
add_popart_py_unit_test(popxl-session_set_device test_session_set_device.py VARIANTS Hw)
add_popart_py_unit_test(popxl-tensor_data test_tensor_data.py VARIANTS IpuModel)
add_popart_py_unit_test(popxl-session_lazy_weights_to_host test_session_lazy_weights_to_host.py VARIANTS IpuModel Hw)
add_popart_py_unit_test(popxl-test_io_sizes test_io_sizes.py VARIANTS IpuModel)
add_popart_py_unit_test(popxl-test_averagepool test_averagepool.py VARIANTS IpuModel)
add_popart_py_unit_test(popxl-test_cached-executables test_cached_executables.py VARIANTS Hw)
add_popart_py_unit_test(popxl-test_maxpool test_maxpool.py VARIANTS IpuModel)
add_popart_py_unit_test(popxl-test_conv test_conv.py VARIANTS IpuModel)
add_popart_py_unit_test(popxl-test_interpolate test_interpolate.py VARIANTS IpuModel)
add_popart_py_unit_test(popxl-test_roialign test_roialign.py VARIANTS IpuModel)
add_popart_py_unit_test(popxl-test_argmax test_argmax.py VARIANTS IpuModel)
add_popart_py_unit_test(popxl-test_argmin test_argmin.py VARIANTS IpuModel)
add_popart_py_unit_test(popxl-test_exp test_exp.py VARIANTS IpuModel)
add_popart_py_unit_test(popxl-test_remote_code_load test_remote_code_load.py VARIANTS IpuModel)
add_popart_py_unit_test(popxl-write_variables_data_cache test_write_variables_data_cache.py VARIANTS Hw)
add_popart_py_unit_test(popxl-test_session_passed_device test_session_passed_device.py VARIANTS Hw)
# Running remote buffer test on POD system (multicard) to test interactions with GW
add_popart_py_unit_test(popxl-test_session_remote_buffers test_session_remote_buffers.py VARIANTS Hw LABELS multicard)
add_popart_py_unit_test(popxl-test_replica_sharding test_replica_sharding.py VARIANTS Hw LABELS multicard)


# popxl-grouped_initialization test starts here
set(retieval_mode_options "all_replicas" "one_per_group")
set(remote_options "True" "False")
set(rts_options "True" "False")
set(config_options "config0" "config1" "config2" "config3" "config4")

foreach(retieval ${retieval_mode_options})
  foreach(remote ${remote_options})
    foreach(rts ${rts_options})
        foreach(config ${config_options})
# linter complains if this is indented
add_popart_py_unit_test(popxl-grouped_initialization test_grouped_initialization.py VARIANTS Hw MATCHEXPR "[${retieval}-${remote}-${rts}-${config}]")
      endforeach()
    endforeach()
  endforeach()
endforeach()
# popxl-grouped_initialization test ends here
