# Copyright (c) 2021 Graphcore Ltd. All rights reserved.
add_subdirectory(pipelining)
add_popart_py_unit_test(test_dot_visualizer VARIANTS IpuModel2)
add_popart_py_unit_test(test_milestone1_basic_subgraph VARIANTS IpuModel2)
add_popart_py_unit_test(test_milestone2_autodiff VARIANTS IpuModel2)
add_popart_py_unit_test(test_modified_call VARIANTS IpuModel2)
add_popart_py_unit_test(test_random_seed VARIANTS IpuModel2)
add_popart_py_unit_test(test_remote_buffer_store_load VARIANTS Hw)
add_popart_py_unit_test(test_model_caching VARIANTS Hw)
add_popart_py_unit_test(test_rts_autodiff VARIANTS IpuModel2)
add_popart_py_unit_test(test_gather_oor VARIANTS IpuModel2)
add_popart_py_unit_test(test_session VARIANTS IpuModel2)
add_popart_py_unit_test(test_session_ctxtmgr VARIANTS Cpu IpuModel2 Hw)
add_popart_py_unit_test(test_session_set_device VARIANTS Hw)
add_popart_py_unit_test(test_tensor_data VARIANTS IpuModel2)
add_popart_py_unit_test(test_session_lazy_weights_to_host VARIANTS IpuModel2 Hw)
add_popart_py_unit_test(test_io_sizes VARIANTS IpuModel2)
add_popart_py_unit_test(test_averagepool VARIANTS IpuModel2)
add_popart_py_unit_test(test_cached_executables VARIANTS Hw)
add_popart_py_unit_test(test_maxpool VARIANTS IpuModel2)
add_popart_py_unit_test(test_conv VARIANTS IpuModel2)
add_popart_py_unit_test(test_interpolate VARIANTS IpuModel2)
add_popart_py_unit_test(test_roialign VARIANTS IpuModel2)
add_popart_py_unit_test(test_argmax VARIANTS IpuModel2)
add_popart_py_unit_test(test_argmin VARIANTS IpuModel2)
add_popart_py_unit_test(test_exp VARIANTS IpuModel2)
add_popart_py_unit_test(test_abs VARIANTS IpuModel2)
add_popart_py_unit_test(test_cos VARIANTS IpuModel2)
add_popart_py_unit_test(test_sin VARIANTS IpuModel2)
add_popart_py_unit_test(test_swish VARIANTS IpuModel2)
add_popart_py_unit_test(test_greater VARIANTS IpuModel2)
add_popart_py_unit_test(test_conditional VARIANTS IpuModel2)
add_popart_py_unit_test(test_conditional_variable VARIANTS IpuModel2)
add_popart_py_unit_test(test_cumsum VARIANTS IpuModel2)
add_popart_py_unit_test(test_remote_code_load VARIANTS IpuModel2)
add_popart_py_unit_test(test_write_variables_data_cache VARIANTS Hw)
add_popart_py_unit_test(test_session_passed_device VARIANTS Hw)
add_popart_py_unit_test(test_shaped_dropout VARIANTS IpuModel2)
# Running remote buffer test on POD system (multicard) to test interactions with GW
add_popart_py_unit_test(test_session_remote_buffers VARIANTS Hw LABELS multicard)
add_popart_py_unit_test(test_replica_sharding VARIANTS Hw LABELS multicard)
add_popart_py_unit_test(test_print_tensor VARIANTS IpuModel2)


# popxl-grouped_initialization test starts here
set(retieval_mode_options "all_replicas" "one_per_group")
set(remote_options "True" "False")
set(rts_options "True" "False")
set(config_options "config0" "config1" "config2" "config3" "config4")

foreach(retieval ${retieval_mode_options})
  foreach(remote ${remote_options})
    foreach(rts ${rts_options})
        foreach(config ${config_options})
# linter complains if this is indented
add_popart_py_unit_test(test_grouped_initialization VARIANTS Hw MATCHEXPR "[${retieval}-${remote}-${rts}-${config}]")
      endforeach()
    endforeach()
  endforeach()
endforeach()
# popxl-grouped_initialization test ends here
